syntax = "proto3";

option go_package = "github.com/kaspanet/kaspad/cmd/kaspawallet/daemon/pb";
package kaspawalletd;

service kaspawalletd {
  rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse) {}
  rpc GetExternalSpendableUTXOs (GetExternalSpendableUTXOsRequest) returns (GetExternalSpendableUTXOsResponse) {}
  rpc CreateUnsignedTransactions (CreateUnsignedTransactionsRequest) returns (CreateUnsignedTransactionsResponse) {}
  rpc ShowAddresses (ShowAddressesRequest) returns (ShowAddressesResponse) {}
  rpc NewAddress (NewAddressRequest) returns (NewAddressResponse) {}
  rpc Shutdown (ShutdownRequest) returns (ShutdownResponse) {}
  rpc Broadcast (BroadcastRequest) returns (BroadcastResponse) {}
  // Since SendRequest contains a password - this command should only be used on a trusted or secure connection
  rpc Send(SendRequest) returns (SendResponse) {}
  // Since SignRequest contains a password - this command should only be used on a trusted or secure connection
  rpc Sign(SignRequest) returns (SignResponse) {}
}

message GetBalanceRequest {
  string id = 1;
}

message GetBalanceResponse {
  string id = 1;
  uint64 available = 2;
  uint64 pending = 3;
  repeated AddressBalances addressBalances = 4;
}

message AddressBalances {
  string address = 2;
  uint64 available = 3;
  uint64 pending = 4;
}

message CreateUnsignedTransactionsRequest {
  string id = 1;
  string address = 2;
  uint64 amount = 3;
  repeated string from = 4;
}

message CreateUnsignedTransactionsResponse {
  string id = 1;
  repeated bytes unsignedTransactions = 2;
}

message ShowAddressesRequest {
  string id = 1;
}

message ShowAddressesResponse {
  string id = 1;
  repeated string address = 2;
}

message NewAddressRequest {
  string id = 1;
}

message NewAddressResponse {
  string id = 1;
  string address = 2;
}

message BroadcastRequest {
        string id = 1;
        bool isDomain = 2;  
        repeated bytes transactions = 3;
}

message BroadcastResponse {
  string id = 1;
  repeated string txIDs = 2;
}

message ShutdownRequest {
        string id = 1;
}

message ShutdownResponse {
        string id = 1;
}

message Outpoint {
  string transactionId = 1;
  uint32 index = 2;
}

message UtxosByAddressesEntry {
  string address = 1;
  Outpoint outpoint = 2;
  UtxoEntry utxoEntry = 3;
}

message ScriptPublicKey {
  uint32 version = 1;
  string scriptPublicKey = 2;
}

message UtxoEntry {
  uint64 amount = 1;
  ScriptPublicKey scriptPublicKey = 2;
  uint64 blockDaaScore = 3;
  bool isCoinbase = 4;
}

message GetExternalSpendableUTXOsRequest{
  string id = 1;
  string address = 2;
}

message GetExternalSpendableUTXOsResponse{
  string id = 1;
  repeated UtxosByAddressesEntry Entries = 2;
}

// Since SendRequest contains a password - this command should only be used on a trusted or secure connection
message SendRequest{
  string id = 1;
  string toAddress = 2;
  uint64 amount = 3;
  string password = 4;
  repeated string from = 5;
}

message SendResponse{
  string id = 1;
  repeated string txIDs = 2;
}

// Since SignRequest contains a password - this command should only be used on a trusted or secure connection
message SignRequest{
  string id = 1;
  repeated bytes unsignedTransactions = 2;
  string password = 3;
}

message SignResponse{
  string id = 1;
  repeated bytes signedTransactions = 2;
}
